<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Happy Homes</string>
    <string name="uadminname">Username</string>
    <string name="adminpass">Password</string>
    <string name="loginbtn">Login</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home__admin">Home_Admin</string>
    <string name="happy_homes">ＨＡＰＰＹ ＨＯＭＥＳ</string>
    <string name="app_tech">Approve Technician</string>
    <string name="tech_detail">Technician Details</string>
    <string name="cust_detail">Customer Details</string>
    <string name="feedback">Feedback</string>
    <string name="faq">FAQ</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_approve_tech">Approve Technician</string>
    <string name="title_activity_tech_detail">Technician Detail</string>
    <string name="title_activity_cust_detail">Customer Detail</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_profile">Profile</string>
    <string name="name">Name:</string>
    <string name="category">Category:</string>
    <string name="dob">Date of Birth:</string>
    <string name="mail">Email ID:</string>
    <string name="contact">Contact Number:</string>
    <string name="Qualification">Qualification:</string>
    <string name="logout">Logout</string>
</resources>