<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="8dp">
    <TextView
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name :"
        android:layout_marginStart="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <TextView
        android:id="@+id/cname"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact :"
            android:layout_marginStart="5dp"
            android:textColor="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <TextView
        android:id="@+id/cmob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
      android:layout_marginStart="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

<LinearLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_marginTop="8dp">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email :"
        android:layout_marginStart="5dp"
        android:textColor="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <TextView
        android:id="@+id/cmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"

        android:layout_marginStart="35dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Address :"
        android:layout_marginStart="5dp"
        android:textColor="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    <TextView
        android:id="@+id/caddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Address:"
        android:layout_marginStart="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>
<ImageView
    android:layout_marginTop="8dp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:src="@drawable/line12"/>

</LinearLayout>